
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int RosSymFreeMem (void*) ;

void xfree(void *v) {
 if (v) RosSymFreeMem(v);
}
